--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <br>
                 <p>Me chamo Walter Emanuel e comecei na área de Programação e Web Design faz pouco tempo, porém 
                     foi algo que me chamou muito a atenção pois sempre fui muito centrado e íntimo quanto a Tecnologia da Informação no geral.
-                    Adquiri conhecimentos em Logica de Programação, HTML5, CSS e Javascript juntamente com GIT e Github.
+                    Adquiri conhecimentos em Logica de Programação, HTML5, CSS e Javascript juntamente com versionamento GIT e Github.
                     <br>
                     Meu contato com a área é de cerca de 6 mêses, sendo 4 mêses estudando HTML/CSS e 2 mêses estudando JS.
                     <br>
