--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
                         </article>
 
                          <article class="recent-works-card">
-                            <a class="imagem-link" target="_blank" href="https://waltrod.github.io/cronometro/">
+                            <a class="imagem-link" target="_blank" href="https://waltrod.github.io/landingpagecocacola/">
                                 <img src="images/thumbs/cronos.jpg" alt="descrição">
                             </a>
-                            <p class="recent-works-card-title">Cronômetro<br>(Projeto Pessoal)</p>
-                            <p>Cronômetro feito usando conhecimentos de JavaScript adquirido em curso.
-                                <br>◉ Foi aplicado HTML, CSS e JS.
+                            <p class="recent-works-card-title">Landing Page CocaCola<br>(Projeto Pessoal)</p>
+                            <p>Landing Page responsiva feita usando aplicações basicas de HTML e CSS.
+                                <br>◉ Foi aplicado HTML e CSS.
                             </p>
                         </article>
 
