--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
                          <article class="recent-works-card">
                             <a class="imagem-link" target="_blank" href="https://waltrod.github.io/landingpagecocacola/">
-                                <img src="images/thumbs/cronos.jpg" alt="descrição">
+                                <img src="images/thumbs/coca.jpg" alt="descrição">
                             </a>
                             <p class="recent-works-card-title">Landing Page CocaCola<br>(Projeto Pessoal)</p>
                             <p>Landing Page responsiva feita usando aplicações basicas de HTML e CSS.
