--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link href="./fontawesome-free-6.1.2-web/css/all.css" rel="stylesheet">
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/estilo.css">
+	<link rel="stylesheet" href="css/media.css">
         <script src="./script.js" defer></script>
     
     </head>
