--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
                     <div class="col-2">
                 
                         <article class="recent-works-card">
-                            <a class="imagem-link" href="https://waltrod.github.io/infusion/"target="_blank">
-                                <img src="images/thumbs/infusion.jpg" alt="descrição">
+                            <a class="imagem-link" href="https://waltrod.github.io/brutalkillstore/"target="_blank">
+                                <img src="images/thumbs/brutalkill.jpg" alt="descrição">
                             </a>
-                            <p class="recent-works-card-title">Projeto Infusion <br>
-                                (Projeto feito em aula)</p>
-                            <p>Projeto feito em aula de Web-Design na plataforma Udemy.
+                            <p class="recent-works-card-title">Projeto BrutalKill <br>
+                                (Projeto pessoal)</p>
+                            <p>Projeto pessoal responsivo! (Ou quase xD).
                                 <br>
                                 <br>
                                 ◉ Foi aplicado HTML, CSS e JS.
