--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <li><a href="https://github.com/WaltRod" class="icon-link" target="_blank"><span class="hidden">Git</span><i class="fa-brands fa-github"></i></a></li>
             </ul>
             <ul class="copyright">
-                <li>© Walter</li><li>Codificação: <a href="https://github.com/WaltRod" target="_blank" class="copy">GitHub</a></li>
+                <li class="waltineo">© Walter</li><li>Codificação: <a href="https://github.com/WaltRod" target="_blank" class="copy">GitHub</a></li>
             </ul>
             
         </footer>
