Add jogo de plataforma

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                         </article>
             
                         <article class="recent-works-card">
-                            <a class="imagem-link" href="https://waltrod.github.io/pokedex/"target="_blank">
-                                <img src="images/thumbs/dex.jpg" alt="descrição">
+                            <a class="imagem-link" href="https://waltrod.github.io/Jogo-de-plataforma/"target="_blank">
+                                <img src="images/thumbs/game.jpg" alt="descrição">
                             </a>
-                            <p class="recent-works-card-title">Pokedex<br>(Projeto Pessoal)</p>
-                            <p>Pokedex feita usando JS em conjunto a uma API de Pokemon (pokeapi.co).
+                            <p class="recent-works-card-title">Jogo de plataforma<br>(Projeto Pessoal)</p>
+                            <p>Jogo de plataforma para navegador inspirado no T-REX game do google.
                                 <br>◉ Foi aplicado HTML, CSS e JS </p>
                         </article>
                 
