Adicionando mais projetos!

--- a/index.html
+++ b/index.html
@@ -82,6 +82,14 @@
                             <p>Jogo de plataforma para navegador inspirado no T-REX game do google.
                                 <br>◉ Foi aplicado HTML, CSS e JS </p>
                         </article>
+			<article class="recent-works-card">
+                            <a class="imagem-link" href="https://waltrod.github.io/loginTheCycle/"target="_blank">
+                                <img src="images/thumbs/thecycl.jpg" alt="descrição">
+                            </a>
+                            <p class="recent-works-card-title">Login The Cycle<br>(Projeto Pessoal)</p>
+                            <p>Estrutura de login em conta do jogo The Cycle.
+				    <br>◉ Foi aplicado HTML, CSS e JS </p>
+			    </article>	
                 
                     </div>
                     <div class="col-2">
@@ -108,6 +116,14 @@
                                 <br>◉ Foi aplicado HTML e CSS.
                             </p>
                         </article>
+			<article class="recent-works-card">
+                            <a class="imagem-link" href="https://waltrod.github.io/LF-Distribuidora/"target="_blank">
+                                <img src="images/thumbs/LF.jpg" alt="descrição">
+                            </a>
+                            <p class="recent-works-card-title">LF Distribuidora<br>(Projeto Pessoal)</p>
+                            <p>Site de distribuidora de bebida criado com o intuito de atrair novos clientes!
+				    <br>◉ Foi aplicado HTML, CSS e JS.
+                            </p>
 
                     </div>
                 </div> 
