--- a/index.html
+++ b/index.html
@@ -138,12 +138,14 @@
                 <h4>Outros conhecimentos</h4>
                 
                 <p>
-                    <img src="images/eu.jpg" alt="" class="img-left"> Trabalhei 3 Anos na empresa <a href="https://www.moura.com.br/" target="_blank" class="linkk">Baterias Moura</a> (Distribuidor Conorte)! Sendo dois anos como estagiário
-                    Aux de vendas e um ano como Aux de Estoque! O motivo da saída foi o fato de eu estar procurando um emprego na área de desenvolvedor.
+                    <img src="images/eu.jpg" alt="" class="img-left"> Atualmente trabalho na empresa <a href="https://www.moura.com.br/" target="_blank" class="linkk">Baterias Moura</a> (Distribuidor Conorte)! Tenho 2 anos 
+			de estágio como Aux de vendas e um ano como Aux de Estoque, totalizando 3 anos na empresa! Porém pretendo migrar um emprego na área de programação.
                     <br></br>
                     Ensino superior incompleto/em andamento na área de ADM pela <a href="https://www.unifipmoc.edu.br/" target="_blank " class="linkk">Unifipmoc.</a>
                     <br></br>
                     Curso de Aux Adm feito na instituição <a href="https://sistemadivinaprovidencia.org/" target="_blank" class="linkk">Divina Providencia.</a>
+		    <br></br>
+	            Curso de HTML, CSS e JS completo feito via <a href="https://www.udemy.com/share/101zbq3@jeZhw8OfFNQOoE51lsq3JVRJaDDo4KuS-4L82Ki3S60DLXb4x6217P6DB1Je_KFzQg==/" target="_blank" class="linkk">Udemy.</a>
                 </p>
                 
             </section>
