--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                 
                 <p>
                     <img src="images/eu.jpg" alt="" class="img-left"> Atualmente trabalho na empresa <a href="https://www.moura.com.br/" target="_blank" class="linkk">Baterias Moura</a> (Distribuidor Conorte)! Tenho 2 anos 
-			de estágio como Aux de vendas e um ano como Aux de Estoque, totalizando 3 anos na empresa! Porém pretendo migrar um emprego na área de programação.
+			de estágio como Aux de vendas e um ano como Aux de Estoque, totalizando 3 anos na empresa! Porém pretendo migrar para um emprego na área de programação.
                     <br></br>
                     Ensino superior incompleto/em andamento na área de ADM pela <a href="https://www.unifipmoc.edu.br/" target="_blank " class="linkk">Unifipmoc.</a>
                     <br></br>
