add new project

--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
                             </p>
                         </article>
 			<article class="recent-works-card">
-                            <a class="imagem-link" href="https://waltrod.github.io/LF-Distribuidora/"target="_blank">
-                                <img src="images/thumbs/LF.jpg" alt="descrição">
+                            <a class="imagem-link" href="https://waltrod.github.io/LandingPageBrutalKill/"target="_blank">
+                                <img src="images/thumbs/landbrut.png" alt="descrição">
                             </a>
-                            <p class="recent-works-card-title">LF Distribuidora<br>(Projeto Pessoal)</p>
-                            <p>Site de distribuidora de bebida criado com o intuito de atrair novos clientes!
+                            <p class="recent-works-card-title">Landing BrutalKill<br>(Projeto Pessoal)</p>
+                            <p>Landing page construida com o intuito de complementar o ecommerce Brutalkill
 				    <br>◉ Foi aplicado HTML, CSS e JS.
                             </p>
 
