--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <header class="main-header">
             <a href="index.html" class="main-header-link imagem-link">
-                <img src="images/pixelme.jpg" class="walt" alt="perfil">
+                <img src="images/meprog.jpg" class="walt" alt="perfil">
             </a>
             <div id="text" class="walttitle">
             <h1>
