Adicionando mais conhecimentos!

--- a/index.html
+++ b/index.html
@@ -138,14 +138,16 @@
                 <h4>Outros conhecimentos</h4>
                 
                 <p>
-                    <img src="images/eu.jpg" alt="" class="img-left"> Atualmente trabalho na empresa <a href="https://www.moura.com.br/" target="_blank" class="linkk">Baterias Moura</a> (Distribuidor Conorte)! Tenho 2 anos 
+                    <img src="images/me.jpg" alt="" class="img-left"> Atualmente trabalho na empresa <a href="https://www.moura.com.br/" target="_blank" class="linkk">Baterias Moura</a> (Distribuidor Conorte)! Tenho 2 anos 
 			de estágio como Aux de vendas e um ano como Aux de Estoque, totalizando 3 anos na empresa! Porém pretendo migrar para um emprego na área de programação.
                     <br></br>
                     Ensino superior incompleto/em andamento na área de ADM pela <a href="https://www.unifipmoc.edu.br/" target="_blank " class="linkk">Unifipmoc.</a>
                     <br></br>
                     Curso de Aux Adm feito na instituição <a href="https://sistemadivinaprovidencia.org/" target="_blank" class="linkk">Divina Providencia.</a>
 		    <br></br>
-	            Curso de HTML, CSS e JS completo feito via <a href="https://www.udemy.com/share/101zbq3@jeZhw8OfFNQOoE51lsq3JVRJaDDo4KuS-4L82Ki3S60DLXb4x6217P6DB1Je_KFzQg==/" target="_blank" class="linkk">Udemy.</a>
+	            Curso de HTML, CSS e JS completo feito via <a href="https://www.udemy.com/certificate/UC-fd18dd6b-f1b5-4948-a7a4-4af87b083399/" target="_blank" class="linkk">Udemy.</a>
+	            <br></br>
+	            Curso de TailwindCSS em andamanto via <a href="https://www.udemy.com/share/103UhS3@qPBTpD91-kdbh2uvZPoZMUNDXuDVjK6mN7NXGNQUBO6CiWXFhPR4J4F_qK9KM7gTZQ==/" target="_blank" class="linkk">Udemy.</a>
                 </p>
                 
             </section>
