Adicionando novo CV

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     Para qualquer duvida, segue abaixo meu currículo em PDF! :)
                 </p>
                 <br>
-                <a href="./images/curriculo.pdf" title="Veja mais" target="_blank" class="button-default button-default-stroke button-default-big">Currículo</a>
+                <a href="./images/CVOFC.pdf" title="Veja mais" target="_blank" class="button-default button-default-stroke button-default-big">Currículo</a>
                 <p>
                 <br>
                 <br>
